--- a/index.html
+++ b/index.html
@@ -1,11 +1,73 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Today, the 18th day of March, is our birthday</title>
+	<link href="css/style1.css" type="text/css" rel="stylesheet" />
+	<link
+			href="https://fonts.googleapis.com/css?family=Montserrat"
+			rel="stylesheet"
+	/>
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/birthday.js"></script>
+	<script type="text/javascript" src="js/hbd.js"></script>
+	<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css"
+	/>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
+<div class="container-fluid">
+	<div class="row">
+		<div id="code" class="col-md-6 offset-md-3 mt-5">
+			<span class="comments">/**</span><br />
+			<span class="space"/><span class="comments">* Today, the 18th day of March, is our birthday.</span><br />
+			<span class="space"/><span class="comments">*/</span><br />
+			Relationship  relationship = <span class="keyword">new</span>  Relationship(<span class="string">"Samuel && Glória"</span>);<br />
+			Date currentTime = <span class="keyword">new</span> Date(); <br />
+			SimpleDateFormat formatter = <span class="keyword">new</span> SimpleDateFormat(<span class="string">"yyyy-MM-dd HH:mm:ss"</span>);<br />
+			String dateString = formatter.format(currentTime);<br />
+			if( dateString.equals(<span class="string">"2023-03-18 00:00:00"</span>) ){</br>
+			u.age ++;</br>
+			}</br>
+			<span class="keyword">new</span> Thread (){<br />
+			@Override </br>
+			while(true){</br>
+			u.fortune ++;</br>
+			u.happiness ++;</br>
+			}.start()</br>
+			System.out.println(<span class="string">"Happy Birthday for US!"</span>);
+		</div>
+	</div>
+</div>
+<script type="text/javascript">
+	var offsetX = $("#loveHeart").width() / 2;
+	var offsetY = $("#loveHeart").height() / 2 - 55;
+	var together = new Date();
+	together.setFullYear(1999, 5, 29);
+	together.setHours(8);
+	together.setMinutes(0);
+	together.setSeconds(0);
+	together.setMilliseconds(0);
 
-<h1>AINDA EM PROGRESSO</h1>
-
+	if (!document.createElement("canvas").getContext) {
+		var msg = document.createElement("div");
+		msg.id = "errorMsg";
+		msg.innerHTML = "Sorry, browser doesn't support this!";
+		document.body.appendChild(msg);
+		$("#code").css("display", "none");
+		$("#copyright").css("position", "absolute");
+		$("#copyright").css("bottom", "10px");
+		document.execCommand("stop");
+	} else {
+		adjustCodePosition();
+		$("#code").typewriter();
+	}
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
+
+
 </html>
