--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<span class="comments">/**</span><br />
 			<span class="space"/><span class="comments">* Today, the 18th day of March, is our birthday.</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
-			Relationship  relationship = <span class="keyword">new</span>  Relationship(<span class="string">"Samuel && Glória"</span>);<br />
+			Relationship  relationship = <span class="keyword">new</span>  Relationship(<span class="string">"💓💓 Samuel && Glória 💓💓"</span>);<br />
 			Date currentTime = <span class="keyword">new</span> Date(); <br />
 			SimpleDateFormat formatter = <span class="keyword">new</span> SimpleDateFormat(<span class="string">"yyyy-MM-dd HH:mm:ss"</span>);<br />
 			String dateString = formatter.format(currentTime);<br />
@@ -35,10 +35,10 @@
 			<span class="keyword">new</span> Thread (){<br />
 			@Override </br>
 			while(true){</br>
-			u.fortune ++;</br>
-			u.happiness ++;</br>
+			relationship.fortune ++;</br>
+			relationship.happiness ++;</br>
 			}.start()</br>
-			System.out.println(<span class="string">"Happy Birthday for US!"</span>);
+			System.out.println(<span class="string">"Happy Birthday for US! 🔥🥳😍"</span>);
 		</div>
 	</div>
 </div>
