--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="row">
 		<div id="code" class="col-md-6 offset-md-3 mt-5">
 			<span class="comments">/**</span><br />
-			<span class="space"/><span class="comments">* Today, the 18th day of March, is our birthday.</span><br />
+			<span class="space"/><span class="comments">* 18th day of March, is our birthday.</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
 			Relationship  relationship = <span class="keyword">new</span>  Relationship(<span class="string">"💓💓 Samuel && Glória 💓💓"</span>);<br />
 			Date currentTime = <span class="keyword">new</span> Date(); <br />
