--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
 <div class="container-fluid">
 	<div class="row">
 		<div id="code" class="col-md-6 offset-md-3 mt-5">
-			<span class="comments">/**</span><br />
-			<span class="space"/><span class="comments">* 18th day of March, is our birthday.</span><br />
-			<span class="space"/><span class="comments">*/</span><br />
+
 			Relationship  relationship = <span class="keyword">new</span>  Relationship(<span class="string">"💓💓 Samuel && Glória 💓💓"</span>);<br />
 			Date currentTime = <span class="keyword">new</span> Date(); <br />
 			SimpleDateFormat formatter = <span class="keyword">new</span> SimpleDateFormat(<span class="string">"yyyy-MM-dd HH:mm:ss"</span>);<br />
 			String dateString = formatter.format(currentTime);<br />
 			if( dateString.equals(<span class="string">"2023-03-18 00:00:00"</span>) ){</br>
-			u.age ++;</br>
+			relationship.age ++;</br>
 			}</br>
 			<span class="keyword">new</span> Thread (){<br />
 			@Override </br>
@@ -39,6 +37,9 @@
 			relationship.happiness ++;</br>
 			}.start()</br>
 			System.out.println(<span class="string">"Happy Birthday for US! 🔥🥳😍"</span>);
+			<audio controls loop>
+				<source src="music/MARABERTODeRepente.mp3" type="audio/mpeg">
+			</audio>
 		</div>
 	</div>
 </div>
