--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<span class="keyword">new</span> Thread (){<br />
 			@Override </br>
 			while(true){</br>
-			relationship.fortune ++;</br>
+			relationship.prosperity ++;</br>
 			relationship.happiness ++;</br>
 			}.start()</br>
 			System.out.println(<span class="string">"Happy Birthday for US! 🔥🥳😍"</span>);
